--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "X-tra Telegram",
-  "description": "Userbot created by a SNAPDRAGON and custom fork by ANUBIS\n\n join https://t.me/XtraTgChat for any problems or support",
+  "name": "🇸ʜᴀᴅᴏᴡ",
+  "description": "Userbot created by a DOMINATOR-XD\n\n join https://t.me/SHADOWS_USERBOT for any problems or support",
   "logo": "https://telegra.ph/file/1be6c59f53fef57b5745b.jpg",
   "keywords": [
     "telegram",
@@ -9,7 +9,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/Prince-Mendiratta/X-tra-Telegram/",
+  "repository": "https://github.com/KhanSarKs/SHADOW-USERBOT",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
